Fixed header title spacing

--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -17,7 +17,7 @@
         width: 1000px
         h1
             font-weight: 500
-            line-height: 1.5
+            line-height: 1.25
             padding-inline: 20px
         span
             padding-inline: 20px
